Replaced some deprecated java methods.